<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Keyboard</string>
    <string name="err_noclient">No client connected!</string>
    <string name="notification_title">Android Remote Keyboard</string>
    <string name="notification_waiting">Listening on %1$s Port 2323</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="testtext">Test your connection here!</string>
    <string name="mi_help">Help</string>
    <string name="mi_select">Select Keyboard</string>
    <string name="err_notenabled">Remote Keyboard is not enabled as an inputmethod. Open system settings to enable it now?</string>
    <string name="err_notenabled_title">Inputmethod disabled</string>
    <string name="app_quickinstuctions">Set Remote Keyboard as your <b>input method</b>, then touch any textfield to activate it. To actually type, connect to your device with a telnet client from your desktop computer. Remote Keyboard is listening for connections on port <b>2323</b> of host <b>%1$s</b>.<p/> For a real test, try using Remote Keyboard with TextFiction (see menu).</string>
    <string name="terminal_title">Android Remote Keyboard</string>
    <string name="terminal_statusbar">Status: Connected</string>
    <string name="notification_peer">Connected to: %1$s</string>
    <string name="msg_sent">Text sent to client</string>
    <string name="title_activity_replacements_list">Replacements</string>
    <string name="mi_add_replacement">Add</string>
    <string name="mi_replacements">Word Replacements</string>
    <string name="title_activity_replacement">Replacement Editor</string>
    <string name="mi_trash">Delete</string>
    <string name="lbl_shortcut">Shortcut:</string>
    <string name="lbl_phrase">Phrase:</string>
    <string name="no_replacements">No word substitutions defined. Use the plus symbol to add one.</string>
    <string name="err_no_replacement">"No substitute known for: %1$s"</string>
    <string name="mi_clear_list">Clear List</string>
    <string name="homepage">http://www.onyxbits.de/remotekeyboard</string>
    <string name="title_confirm">Please confirm</string>
    <string name="msg_really_delete">Do you really want to remove all entries from the list?</string>
    <string name="mi_export">Export</string>
    <string name="mi_import">Import</string>
    <string name="title_import">Import from URL</string>
    <string name="err_malformed_url">Malformed URL</string>
    <string name="err_network_error">Network error</string>
    <string name="err_corrupt_data">Corrupt data</string>
    <string name="msg_client_disconnected">Client disconnected</string>
    <string name="password">Password:</string>
    <string name="err_quicklauncher_not_assigned">Nothing assigned to this quicklauncer</string>
    <string name="err_quicklauncher_failed">Failed to launch activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_select_app">Select App to launch</string>
    <string name="pref_title_f1">F1 will launch:</string>
    <string name="pref_title_f2">F2 will launch:</string>
    <string name="pref_title_f3">F3 will launch:</string>
    <string name="pref_title_f4">F4 will launch:</string>
    <string name="pref_title_f5">F5 will launch:</string>
    <string name="pref_title_f6">F6 will launch:</string>
    <string name="pref_title_f7">F7 will launch:</string>
    <string name="pref_title_f8">F8 will launch:</string>
    <string name="pref_title_f9">F9 will launch:</string>
    <string name="pref_title_f10">F10 will launch:</string>
    <string name="pref_title_f11">F11 will launch:</string>
    <string name="pref_title_f12">F12 will launch:</string>
    <string name="mi_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_quicklaunchers">Quicklaunchers</string>
    <string name="msg_password_set">Password set</string>
    <string name="msg_password_not_set">Password not set</string>
    <string name="pref_title_password">Password protection</string>
    <string name="title_set_password">Set password</string>
    <string name="title_rate">Rate this app?</string>
    <string name="msg_rate">Hi,\nseems like you find this app useful. Would you consider rating it? This will only take a minute of your time, but encourages further development.</string>
    <string name="btn_sure">Sure!</string>
    <string name="btn_no_thanks">No thanks</string>
    <string name="btn_later">Later</string>
    <string name="pref_title_fullscreen">Fullscreen textboxes in landscape mode</string>
    <string name="title_tf">TextFiction</string>
    

</resources>